eddited final ver

--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -42,9 +42,20 @@
                     </div>
                 </div>
             </div>
+            <div id="scene">
+                <div class="bg_img img1" data-depth="0.14"><img src="parralax_images/1.svg" alt=""></div>
+                <div class="bg_img img2" data-depth="0.25"><img src="parralax_images/2.svg" alt=""></div>
+                <div class="bg_img img3" data-depth="0.18"><img src="parralax_images/3.svg" alt=""></div>
+                <div class="bg_img img4" data-depth="0.1"><img src="parralax_images/4.svg" alt=""></div>
+                <div class="bg_img img5" data-depth="0.25"><img src="parralax_images/5.svg" alt=""></div>
+                <div class="bg_img img6" data-depth="0.2"><img src="parralax_images/10.svg" alt=""></div>
+                <div class="bg_img img7" data-depth="0.04"><img src="parralax_images/7.svg" alt=""></div>
+                <div class="bg_img img8" data-depth="0.52"><img src="parralax_images/8.svg" alt=""></div>
+            </div>
         </div>
         <div class="bg_topgun">
-            <div class="bg"></div>
+            <div class="bg"><img src="img/bg_logo.png" alt="bg"></div>
+            <span class="active_shadow"></span>
         </div>
         <div class="nav-btn">
             <a href="#"><span></span></a>
@@ -260,7 +271,7 @@
                                         <a class="bottom" href="#">Cкачать</a>
                                     </div>
                                     <div class="block">
-                                        <a class="top top4" href="#"></a>
+                                        <a class="top top4 popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto"></a>
                                         <p>Видео</p>
                                         <a class="bottom" href="#">Cкачать</a>
                                     </div>
@@ -271,37 +282,43 @@
                             <h5>массмедиа</h5>
                             <div class="content_center">
                                 <div class="block">
-                                    <a class="top top1" href="#"></a>
-                                    <p><span>Интервью  для канала</span> "Бюрократ" — о бизнесе, долгах, Тинькове, Трансформации<br> и Бизнес Молодости</p>
-                                    <a class="bottom" href="#">Cмотреть</a>
+                                    <a class="top top1 popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto"></a>
+                                    <p><span>Интервью  для канала</span> "Бюрократ" — о бизнесе, долгах, Тинькове, Трансформации
+                                        <br> и Бизнес Молодости</p>
+                                    <a class="bottom popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto">Cмотреть</a>
                                 </div>
                                 <div class="block">
-                                    <a class="top top2" href="#"></a>
+                                    <a class="top top2 popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto"></a>
                                     <p>Бунтарь против правил<span> Выступление на форуме </span>«Герои Российского Бизнеса» 2017
                                     </p>
-                                    <a class="bottom" href="#">Cмотреть</a>
+                                    <a class="bottom popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto">Cмотреть</a>
                                 </div>
                                 <div class="block">
-                                    <a class="top top3" href="#"></a>
+                                    <a class="top top3 popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto"></a>
                                     <p>Большое интервью
-                                        <br> c <span>Алексеем Локонцевым </span><br><span>об истории и развитии</span><br>TOPGUN BARBERSHOP</p>
-                                    <a class="bottom" href="#">Cмотреть</a>
+                                        <br> c <span>Алексеем Локонцевым </span>
+                                        <br><span>об истории и развитии</span>
+                                        <br>TOPGUN BARBERSHOP</p>
+                                    <a class="bottom" href="http://www.youtube.com/watch?v=0O2aH4XLbto">Cмотреть</a>
                                 </div>
                                 <div class="block">
-                                    <a class="top top4" href="#"></a>
-                                    <p><span>Бизнес секреты 3.0:<br></span>Олег Тиньков<br> и Алексей Локонцев<br> о TOPGUN Barbershop</p>
-                                    <a class="bottom" href="#">Cмотреть</a>
+                                    <a class="top top4 popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto"></a>
+                                    <p><span>Бизнес секреты 3.0:<br></span>Олег Тиньков
+                                        <br> и Алексей Локонцев
+                                        <br> о TOPGUN Barbershop</p>
+                                    <a class="bottom popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto">Cмотреть</a>
                                 </div>
                                 <div class="block">
-                                    <a class="top top5" href="#"></a>
-                                    <p><span>Интервью  для канала </span>"Бюрократ" — о бизнесе, долгах, Тинькове, Трансформации<br> и Бизнес Молодости</p>
-                                    <a class="bottom" href="#">Cмотреть</a>
+                                    <a class="top top5 popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto"></a>
+                                    <p><span>Интервью  для канала </span>"Бюрократ" — о бизнесе, долгах, Тинькове, Трансформации
+                                        <br> и Бизнес Молодости</p>
+                                    <a class="bottom popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto">Cмотреть</a>
                                 </div>
                                 <div class="block">
-                                    <a class="top top6" href="#"></a>
+                                    <a class="top top6 popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto"></a>
                                     <p>Бунтарь против правил <span>Выступление на форуме </span>«Герои Российского Бизнеса» 2017
                                     </p>
-                                    <a class="bottom" href="#">Cмотреть</a>
+                                    <a class="bottom popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto">Cмотреть</a>
                                 </div>
                             </div>
                         </div>
@@ -596,6 +613,8 @@
     </div>
     <!--Sripts-->
     <script src="libs/jquery/dist/jquery.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+    <script src="libs/magnific/jquery.magnific-popup.min.js"></script>
     <script src="js/common.js"></script>
 </body>
 
