--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -43,14 +43,8 @@
                 </div>
             </div>
             <div id="scene">
-                <div class="bg_img img1" data-depth="0.14"><img src="parralax_images/1.svg" alt=""></div>
-                <div class="bg_img img2" data-depth="0.25"><img src="parralax_images/2.svg" alt=""></div>
-                <div class="bg_img img3" data-depth="0.18"><img src="parralax_images/3.svg" alt=""></div>
-                <div class="bg_img img4" data-depth="0.1"><img src="parralax_images/4.svg" alt=""></div>
-                <div class="bg_img img5" data-depth="0.25"><img src="parralax_images/5.svg" alt=""></div>
-                <div class="bg_img img6" data-depth="0.2"><img src="parralax_images/10.svg" alt=""></div>
-                <div class="bg_img img7" data-depth="0.04"><img src="parralax_images/7.svg" alt=""></div>
-                <div class="bg_img img8" data-depth="0.52"><img src="parralax_images/8.svg" alt=""></div>
+                <div class="bg_other" data-depth="0.14"></div>
+                
             </div>
         </div>
         <div class="bg_topgun">
@@ -507,6 +501,16 @@
                                             <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
                                         </div>
                                     </div>
+                                    <div class="img_box">
+                                        <div class="img_content">
+                                            <img src="img/crystal.png" alt="logo">
+                                            <div class="shadow"></div>
+                                        </div>
+                                        <div class="txt">
+                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
+                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="bottom_projects">
@@ -585,6 +589,11 @@
                                         <img class="before" src="img/project17.png" alt="">
                                         <img src="img/project17active.svg" alt="" class="after">
                                         <p>сеть арен киберспорта</p>
+                                    </div>
+                                    <div class="block colored">
+                                        <img class="before" src="img/crystal.png" alt="">
+                                        <img src="img/crystal.png" alt="" class="after">
+                                        <p>Crystal lab</p>
                                     </div>
                                 </div>
                             </div>
