--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -141,8 +141,11 @@
                                     <div class="left">
                                         <p><span class="left_item">паушальный взнос</span><span class="numb">1</span><span class="right_item">млн</span><span class="rub"></span></p>
                                     </div>
+                                    <div class="center">
+                                        <p class="top">полное открытие</p>
+                                        <p><span class="left_item"><span class="do">до </span><span class="num">3</span><span class="right_item">млн</span><span class="rub"></span></p>
+                                    </div>
                                     <div class="right">
-                                        <p class="right_top"><span class="left_item">полное открытие</span><span class="do">до </span><span class="numb">3</span><span class="right_item">млн</span><span class="rub"></span></p>
                                         <p class="more">*подробности по телефону</p>
                                         <p class="number">8(800)5507242</p>
                                     </div>
