--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -73,7 +73,7 @@
         <div id="navigation">
             <nav>
                 <ul>
-                    <li class="link1 link"><a class="cena" href="">цена успеха</a></li>
+                    <li class="link1 other link"><a class="cena" href="">цена успеха</a></li>
                     <li class="link2 link other inv"><a href="">topgun invest</a></li>
                     <li class="link3 link dop hidden_txt"><a href="">допматериалы</a></li>
                     <li class="link4 link lts other hidden_txt"><a href="">проекты</a></li>
