--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -44,7 +44,6 @@
             </div>
             <div id="scene">
                 <div class="bg_other" data-depth="0.14"></div>
-                
             </div>
         </div>
         <div class="bg_topgun">
@@ -57,9 +56,6 @@
         <div id="header">
             <div class="container">
                 <div class="header_top">
-                    <div class="left">
-                        <p>8(800)5507242</p>
-                    </div>
                     <div class="logo">
                         <a href="#"></a>
                     </div>
@@ -232,6 +228,7 @@
                                 <div class="bottom_item">
                                     <p class="more">*подробности по телефону</p>
                                     <p class="number">8(800)5507242</p>
+                                    <p class="number_bottom">+7 926 557 79 97</p>
                                 </div>
                             </div>
                         </div>
@@ -340,18 +337,18 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">TOPGUN TATTOO</p>
+                                            <p class="second">БУДЕМ БИТЬ!</p>
+                                            <p class="third">
+                                                Cтильное сетевое решение тату-салонов.
+                                                <br> Лучшие мастера, бьющие в разных стилях.
+                                            </p>
                                         </div>
                                     </div>
                                     <div class="img_box">
                                         <div class="img_content">
                                             <img src="img/project2.svg" alt="logo">
                                             <div class="shadow"></div>
-                                        </div>
-                                        <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -360,8 +357,16 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">TOPGUN INDIVIDUAL</p>
+                                            <p class="second">Новый формат TOPGUN для ценителей высокого стиля.</p>
+                                            <p class="third"> Исключительно top-мастера, top-оборудование, top-стрижки.
+                                                <br> Система хранения персонального инвентаря клиента.
+                                                <br> Сервис и услуги высочайшего классакак в общем зале, так и в закрытой персональной зоне.
+                                                <br> Косметика лучших мужских брендов.
+                                                <br> Премиальный уровень массажа, ногтевого сервиса.
+                                                <br> Настоящие опасные Бритвы.
+                                                </p>
+                                                <p class="second">TOPGUN INDIVIDUAL – исключительно мое.</p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -370,8 +375,11 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">BARBERSHOW Russia</p>
+                                            <p class="second">Первое и единственное всероссийское барбершоу.</p>
+                                            <p class="third">Одно из самых зрелищных событий в мужской бьюти-индустрии за последнее время.
+                                                <br> BARBERSHOW Russia 2017 состоялось 3 сентября 2017 г. на одной из лучших
+                                                <br> и высокотехнологичных event-площадок страны – TESLA Place.</p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -380,8 +388,8 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">Наковальня успеха</p>
+                                            <p class="third">Комплексный проект по бизнес-практикам</p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -390,8 +398,9 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">I-KEY </p>
+                                            <p class="second">Эффективность Вашего бизнеса.</p>
+                                            <p class="third">Системы визуального мониторинга.</p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -400,8 +409,15 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">TOPGUN BARBER INDUSTRY</p>
+                                            <p class="second">Первый брутальный.</p>
+                                            <p class="third">Магазин мужской косметики и аксессуаров.
+                                                <br> Целый магазин только для мужчин.
+                                                <br> Грамотные консультации продавцов-барберов.
+                                                <br> Уникальный ассортимент для различных ситуаций.
+                                                <br>
+                                            </p>
+                                            <p class="second">TOPGUN BARBER INDUSTRY - Привилегия мужчины.</p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -410,8 +426,9 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">TOPWORLD</p>
+                                            <p class="second">Создан делать мир лучше.</p>
+                                            <p class="third">Благотворительный фонд. Наша возможность делать важное.</p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -420,8 +437,8 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">Tizzi trends</p>
+                                            <p class="third">Рекламное агентство.</p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -430,8 +447,9 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">TOPFITNESSGYM</p>
+                                            <p class="second">Cеть фитнес студий по EMS/EMA технологиям
+                                                <br> с сертифицированным немецким оборудованием.</p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -440,8 +458,8 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">PlumBoom</p>
+                                            <p class="third">Уникальные брутальные ювелирные украшения исключительно для мужчин.</p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -450,8 +468,8 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">Каша для мужиков</p>
+                                            <p class="third">Линейка высокоэнергетических каш с натуральным составом.</p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -460,8 +478,9 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">Кофе Шериф</p>
+                                            <p class="second">Цена под контролем шерифа.</p>
+                                            <p class="third">Cеть кофеен с фиксированной ценой на весь ассортимент.</p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -470,8 +489,9 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">Bradato</p>
+                                            <p class="second">Философия брутальности.</p>
+                                            <p class="third">Мужская косметика премиум сегмента.</p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -480,8 +500,10 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">Космос</p>
+                                            <p class="second">Натуральная Чёрная Detox Вода. Природная артезианская вода
+                                                <br> с гуминовым комплексом, благодаря которому она естественным образом
+                                                <br> приобретает уникальный черный цвет. </p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -490,8 +512,9 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">BossBurgers</p>
+                                            <p class="second">Лучшее место для самого главного.</p>
+                                            <p class="third">Бургерная премиального сегмента с ресторанным уровнем обслуживания.</p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -500,8 +523,14 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">COLIZEUM CYBER SPORT ARENA</p>
+                                            <p class="second">Объединяет равных, объединяет лучших.</p>
+                                            <p class="third">Первая франчайзинговая сеть киберспортивных арен в России.
+                                                <br> Самое большое количество ПК в одной сети в Европе.
+                                                <br> Одно из объединяющих культурных явлений нового поколения.
+                                                <br> Пространство для проведения турниров и подготовки лучших команд.
+                                            </p>
+                                            <p class="second">COLIZEUM CYBER SPORT ARENA - Бесконечная прибыль от игры.</p>
                                         </div>
                                     </div>
                                     <div class="img_box">
@@ -510,8 +539,9 @@
                                             <div class="shadow"></div>
                                         </div>
                                         <div class="txt">
-                                            <p class="first">ООО "ТОПГАН", 115114, г.Москва, Павелецкая наб. 2 стр.1, офис 135</p>
-                                            <p class="second">ИНН 7842107759, КПП 784201001, ОГРНИП 1167847215733</p>
+                                            <p class="first">Crystal lab.</p>
+                                            <p class="second">Лаборатория улыбок.</p>
+                                            <p class="third">Сетевое решение по безопасному косметическому отбеливанию зубов.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -524,7 +554,7 @@
                                     </div>
                                     <div class="block">
                                         <img src="img/project2.svg" alt="">
-                                        <p>академи я TOPGUN</p>
+                                        <p>академия TOPGUN</p>
                                     </div>
                                     <div class="block colored">
                                         <img class="before" src="img/project3.svg" alt="">
@@ -625,7 +655,7 @@
     </div>
     <!--Sripts-->
     <script src="libs/jquery/dist/jquery.min.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
     <script src="libs/magnific/jquery.magnific-popup.min.js"></script>
     <script src="js/common.js"></script>
 </body>
