--- a/Shop/catalogue-bigtiles-1200/app/index.html
+++ b/Shop/catalogue-bigtiles-1200/app/index.html
@@ -1672,7 +1672,7 @@
                 </div>
             </div>
         </div>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="libs/jquery/dist/jquery.min.js"></script>
         <script src="js/assets.js"></script>
         <script src="js/main.js"></script>
         <script src="js/catalog.js"></script>
