правки по топгану

--- a/Shop/catalogue-bigtiles-1200/app/index.html
+++ b/Shop/catalogue-bigtiles-1200/app/index.html
@@ -332,7 +332,7 @@
                         </div>
                         <div class="watch-more-block col-lg-3">
                             <div class="block-content">
-                                <h6>Смотрите также</h6>
+                                <p class="watch-more-title">Смотрите также</p>
                                 <ul>
                                     <li><a href="#">Раковины</a></li>
                                     <li><a href="#">Кухонные мойки</a></li>
