--- a/portfolio/Barbershop/app/index.html
+++ b/portfolio/Barbershop/app/index.html
@@ -556,25 +556,21 @@
                                         <img src="img/project2.svg" alt="">
                                         <p>академия TOPGUN</p>
                                     </div>
-                                    <div class="block colored">
-                                        <img class="before" src="img/project3.svg" alt="">
-                                        <img src="img/project3active.svg" alt="" class="after">
+                                    <div class="block">
+                                        <img src="img/project3active.svg" alt="">
                                         <p>новый формат TOPGUN</p>
                                     </div>
-                                    <div class="block colored">
-                                        <img class="before" src="img/project4.png" alt="">
-                                        <img src="img/project4active.png" alt="" class="after">
+                                    <div class="block">
+                                        <img src="img/project4active.png" alt="">
                                         <p>первое и единственное
                                             <br>barbershow в россии</p>
                                     </div>
-                                    <div class="block colored">
-                                        <img class="before" src="img/project5.png" alt="">
-                                        <img src="img/project5active.png" alt="" class="after">
+                                    <div class="block">
+                                        <img src="img/project5active.png" alt="">
                                         <p>бизнес-практика</p>
                                     </div>
-                                    <div class="block colored">
-                                        <img class="before" src="img/project6.svg" alt="">
-                                        <img src="img/project6active.svg" alt="" class="after">
+                                    <div class="block">
+                                        <img src="img/project6active.svg" alt="">
                                         <p>визуальный мониторинг</p>
                                     </div>
                                     <div class="block">
@@ -613,19 +609,16 @@
                                         <img src="img/project15.svg" alt="">
                                         <p>черная вода</p>
                                     </div>
-                                    <div class="block colored">
-                                        <img class="before" src="img/project16.png" alt="">
-                                        <img src="img/project16active.svg" alt="" class="after">
+                                    <div class="block">
+                                        <img src="img/project16active.svg" alt="">
                                         <p>сеть бургерных</p>
                                     </div>
-                                    <div class="block colored">
-                                        <img class="before" src="img/project17.png" alt="">
-                                        <img src="img/project17active.svg" alt="" class="after">
+                                    <div class="block">
+                                        <img src="img/project17active.svg" alt="">
                                         <p>сеть арен киберспорта</p>
                                     </div>
-                                    <div class="block colored">
-                                        <img class="before" src="img/crystal.png" alt="">
-                                        <img src="img/crystal.png" alt="" class="after">
+                                    <div class="block">
+                                        <img src="img/crystal.png" alt="">
                                         <p>Crystal lab</p>
                                     </div>
                                 </div>
